--- a/style/main.css
+++ b/style/main.css
@@ -2,14 +2,15 @@
      --ff-main: 'Roboto', sans-serif;
      --bg-col: #000000;
      --fg-col:#ffffff;
-     --smooth: orangered
+     --accent: orangered;
 }
 *{
      margin:0;
      padding-bottom:0;
      box-sizing: border-box;
      
-     outline-color: var(--smooth);
+     outline-color: var(--accent);
+     outline-offset: .25em;
 }
 
 .container{
@@ -103,6 +104,7 @@
           justify-content: space-around;
           height: 100%;
           background-color: orchid;
+          transition: .5s ease-in;
      }
      .nav-option{
           padding-top:1em;
@@ -125,7 +127,15 @@
           height: 100%;
      }
 }
-
+/* =============== MAIN SCREEN============ */
+.main-screen{
+     background-color: var(--fg-col);
+    
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding:2em;
+}
 
 a{
      text-decoration: none;
@@ -135,3 +145,9 @@ a{
 
 
 
+.img-content{
+     display: block;
+     width:clamp(90px, 90vw,600px) ;
+     height: auto;
+     padding:.5em;
+}
