--- a/style/transition.css
+++ b/style/transition.css
@@ -5,7 +5,7 @@
      width:100%;
      bottom:0;
      z-index: 101;
-     background-color: var(--smooth);
+     background-color: var(--accent);
      transition: .5s ease-out;
      
      display: flex;
