--- a/style/transition.css
+++ b/style/transition.css
@@ -7,16 +7,18 @@
      z-index: 101;
      background-color: var(--accent);
      transition: .5s ease-out;
-     
-     display: flex;
+     /* font-size: 0px; */
+     display:flex;
      align-items: center;
      justify-content: center;
 }
 .smooth{
      color:var(--fg-col);
-     font-size: 5em;
+     font-size: clamp(40px,2em,3em);
      font-family: var(--ff-main);
 }
 .transition.is-active{
      left: 0px;
+     /* font-size: 3em; */
+     /* display: flex; */
 }
