--- a/style/main.css
+++ b/style/main.css
@@ -51,6 +51,7 @@
      align-content: center;
      justify-content: center;
 }
+/* update */
 .navlink p{
      display: flex;
      padding:1em 1em 1em 0em;
