--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Staatliches&display=swap');
+
+
 :root{
      --ff-main: 'Roboto', sans-serif;
+     --ff-title: 'Staatliches', cursive;
+     --circle:clamp(120%,80vw,800px);
 }
 *{
      margin:0;
@@ -26,6 +31,7 @@
      width: 100%;
      position: fixed;
      transition: .3s ease-out;
+     z-index: 500;
 }
 .navbar-main{
      width: 100%;
@@ -34,6 +40,9 @@
      list-style-type: none;
      padding:clamp(15px,1em,40px);
      background:var(--fg-col);
+     -webkit-box-shadow: 0px 7px 24px -17px rgba(66, 68, 90, 1);
+     -moz-box-shadow: 0px 7px 24px -17px rgba(66, 68, 90, 1);
+     box-shadow: 0px 7px 24px -17px rgba(66, 68, 90, 1);
 }
 .navbar-home{
      width: calc(50px,70px,100px);
@@ -123,6 +132,7 @@
           backdrop-filter: blur(10px);
           /* (0,0% 100% / 0.1) */
           transition: .5s ease-in;
+          z-index: 99999;
      }
      .navbar-main{
           padding:clamp(15px,.8em,20px);
@@ -151,7 +161,7 @@
           display: block;
           position: absolute;
           right:1em;
-          z-index:100;
+          z-index:99999;
           width: var(--brand-toggler-size);
           height: var(--brand-toggler-size);
      }
@@ -179,14 +189,103 @@
      cursor:pointer;
 }
 /* =============== MAIN SCREEN============ */
+.circle-content-wrapper{
+     position: relative;
+     /* height: fit-content; */
+}
 .main-screen{
+     position: relative;
      margin-top:150px;
      background-color: var(--fg-col);
-     
-     justify-content: center;
-     align-items: center;
      padding:1em;
      font-size: clamp(15px,8vw,50px);
+}
+
+.big5{
+     text-align: center;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     min-height: 80vh;
+     max-height: 800px ;
+     z-index: 55;
+     position: relative;
+}
+@media (max-width:500px){
+     .main-screen{
+          height: 500px;
+     }
+     .big5{
+          min-height:0;
+          height: 300px;
+     }
+     .bg-circle{
+          /* width: 80%; */
+          max-width: 480px;
+          min-width: 200px;
+          max-height: 500px; 
+     }
+     
+}
+.bg-circle{
+     max-width: 700px;
+     min-width: 400px;
+     width: 110%;
+     border-radius: 50%;
+     background-image:url(../media/back_4.gif);
+     background-repeat: no-repeat;
+     background-size: cover;
+     
+     z-index: 29;
+     position: absolute;
+     left:50%;
+     transform: translate(-50%);
+     top:.5em;
+     
+    
+}
+.bg-circle::after{
+     content:"";
+     padding-bottom: 100%;
+     display: block;
+}
+
+.sm-circle{
+     max-width: 600px;
+     min-width: 300px;
+     width: 65%;
+     border-radius: 50%;
+     background-color:var(--fg-col);
+     z-index: 30;
+     position: absolute;
+     left:50%;
+     top:50%;
+     transform: translate(-50%,-50%);
+    
+}
+.sm-circle::after{
+     content:"";
+     padding-bottom: 100%;
+     display: block;
+}
+.big5-img{
+     display: block;
+     width: clamp(100%,40vw,500px);
+     max-width: 400px;
+}
+.small-title{
+     font-size: clamp(15px,3vw,.5em);
+     font-style: italic;
+     color:var(--fg-col);
+}
+.small-title.White{
+     color:var(--accent);
+}
+.big-title{
+     font-size: clamp(1.8em, 12vw,2em);
+     font-family: var(--ff-title);
+     color:var(--accent);
+
 }
 
 a{
@@ -196,6 +295,7 @@ a{
 }
 
 .content{
+     margin-top:5%;
      padding:3em;
      background-color: var(--bg-col);
      color:white;
