--- a/style/toggler.css
+++ b/style/toggler.css
@@ -1,21 +1,22 @@
 .toggler{
     border:none;
      background-color: transparent;
+     outline:none;
 }
 .menu-btn{
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
-     height: var(--brand-toggler-size);
+     height:var(--brand-toggler-size);
      width: var(--brand-toggler-size);
      cursor: pointer;
      transition: all .5s ease-in-out;
      /* border: 3px solid var(--accent); */
 }
 .menu-btn_burger{
-     width: calc(var(--brand-toggler-size) - 25px);
-     height: 10px;
+     width: 100%;
+     height: 8px;
      background-color: var(--accent);
      border-radius: 5px;
      /* box-shadow: 0 2px 5px rgba(255,101,47,.2); */
@@ -25,8 +26,8 @@
 .menu-btn_burger::after{
      content: "";
      position: absolute;
-     width: calc(var(--brand-toggler-size) - 25px);
-     height: 10px;
+     width: 100%;
+     height: 8px;
      background-color: var(--accent);
      border-radius: 5px;
      /* box-shadow: 0 2px 5px rgba(255,101,47,.2); */
@@ -34,17 +35,21 @@
 
 }
 .menu-btn_burger::before{
-     transform: translate(-30px,-20px);
+     transform: translate(-25px,-16px);
 }
 .menu-btn_burger::after{
-     transform: translate(-30px,20px);
+     transform: translate(-25px,16px);
 }
 .menu-btn.open .menu-btn_burger{
-     transform: translateX(-30px);
-     
+     transform: translateX(-25px);
      background:transparent;
      box-shadow: none;
 }
+.menu-btn.open .menu-btn_burger:focus{
+     outline:none;
+     border:none;
+}
+
 .menu-btn.open .menu-btn_burger::before{
      transform: rotate(45deg);
      background-color: var(--fg-col);
