--- a/style/main.css
+++ b/style/main.css
@@ -38,27 +38,35 @@
      display:flex;
      justify-content: space-between;
      list-style-type: none;
-     padding:clamp(15px,5vw,40px);
+     padding:clamp(10px,5vw,20px);
      background:var(--fg-col);
-     -webkit-box-shadow: 0px 7px 24px -17px rgba(66, 68, 90, 1);
+     -webkit-box-shadow: 0px 7px 24px -17px rgb(255, 255, 255);
      -moz-box-shadow: 0px 7px 24px -17px rgba(66, 68, 90, 1);
      box-shadow: 0px 7px 24px -17px rgba(66, 68, 90, 1);
+}
+.navbar-main > li{
+     height: 50px;
 }
 .navbar-home{
      width: calc(50px,70px,100px);
      position: relative;
      display: flex;
+     text-align: center;
      align-content: center;
      justify-content: center;
 }
 .navbar-home-inside, 
-.navbar-home-inside h5{
+.navbar-home-inside p{
      display: flex;
-     align-content: center;
-     justify-content: center;
+     /* align-content: center; */
+     /* justify-content: flex-end; */
+
 }
 .navlink{
      color:var(--fc-side);
+     display: flex;
+     align-items: center;
+     justify-content: center;
 }
 .nav-option >.navlink:hover{
      transition:  ease-in;
@@ -70,28 +78,29 @@
 .navlink p{
      display: flex;
      color:var(--bg-col);
-     padding:1em 1em 1em 0em;
+     /* padding:1em 1em 1em 0em; */
      
 }
 
 .navbar-list{
-     
+     height: 50px;
      list-style-type: none;
      display:flex;
 }
 .nav-option{
-     padding:.5em;
-     height: 1.5em;
+     /* padding:.5em; */
+     height: .7em;
      position: relative;
      margin:.5em;
      /* margin-right: .15em; */
-     
+     font-size: 25px;
 }
 
 .brand{
-     width: max(60px,70px);
-     height: 60px;
+     width: 50px;
+     height: 50px;
      display: block;
+     text-align: center;
      margin-right: .5em;
      color:var(--bg-col);
 }
@@ -140,6 +149,7 @@
      .nav-option{
           padding-top:1em;
           padding-bottom:1em;
+          font-size: 1em;
      }
      .nav-optionx{
           display: block;
@@ -169,6 +179,10 @@
           overflow:hidden;
           height: 100%;
      }
+     #switch{
+          height: 150px;
+
+     }
 }
 .nav-optionx{
      padding:0px;
@@ -181,8 +195,11 @@
      
 }
 .styl img{
+     display: block;
      width: auto;
-     height: 90px;
+     height: 70px;
+     position: absolute;
+     top:-20px;
 }
 .styl img:hover{
      
