--- a/style/main.css
+++ b/style/main.css
@@ -19,6 +19,7 @@
 
 
 .container{
+      /* scroll-behavior: smooth; */
      font-family: var(--ff-main);
      font-size: 30px;
      position: relative;
